# mango-dor-awards_2_backend

./: .gitignore  .pre-commit-config.yaml  README.md  manage.py  pyproject.toml
accounts/: admin.py  models.py  serializers.py  urls.py  views.py
accounts/migrations/: 0001_initial.py  0002_remove_customuser_email.py  0003_alter_customuser_managers.py
candidates/: admin.py  models.py  serializers.py  urls.py  views.py
candidates/migrations/: 0001_initial.py  0002_rename_nationality_candidate_nationalities_and_more.py
common/: admin.py  models.py  serializers.py  urls.py  views.py
common/migrations/: 0001_initial.py  0002_alter_siteparameters_options.py  0003_alter_siteparameters_options.py
docker/dev/: .env.example  Dockerfile  docker-compose.yaml
mangodorawards/: asgi.py  settings.py  urls.py  wsgi.py
voting/: admin.py  models.py  serializers.py  urls.py  views.py
voting/migrations/: 0001_initial.py  0002_remove_category_slug.py
