[project]
name = "mango-dor-awards-backend"
version = "0.1.0"
description = ""
authors = [
    {name = "Javier",email = "jlm03123@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django (>=5.2.3,<6.0.0)",
    "djangorestframework (>=3.16.0,<4.0.0)",
    "djangorestframework-simplejwt (>=5.3.0,<6.0.0)",
    "django-jet-reboot (>=1.3.10,<2.0.0)",
    "django-cors-headers (>=4.7.0,<5.0.0)",
    "django-extensions (>=4.1,<5.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "pillow (>=11.3.0,<12.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ruff = "^0.12.1"
pre-commit = "^4.2.0"

[tool.ruff]
line-length = 110
exclude = ["migrations"]
lint.select = ["F", "E", "W", "I"]

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
line-ending = "lf"